[package]
name = "asn-db"
version = "0.1.5-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Lookup an IP address for matching ASN information in the database from https://iptoasn.com/"
repository = "https://sr.ht/~jpastuszek/asn-db/"
homepage = "https://jpastuszek.net/asn/"
documentation = "https://docs.rs/asn-db"
readme = "README.md"
keywords = ["asn", "ip", "database"]
categories = ["database", "network-programming"]
license = "MIT"
edition = "2021"

[dependencies]
ipnet = "2.7.2"
bincode = "1.3.3"
csv = "1.2.2"
error-context = "0.1.2"
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
criterion = "0.2.11"
tempfile = "3.6.0"
rand = "0.6.5"

[[bench]]
name = "db"
harness = false
